--- a/chapitre1.tex
+++ b/chapitre1.tex
@@ -128,6 +128,12 @@ semper diam vitae ultrices. Nulla consequat ullamcorper nulla ac consequat.
 
 \subsection{Un dernier sous-titre}
 
+\begin{lstlisting}[caption=Exemple de code]
+for (i=0; i < 10; ++i) {
+  // code
+}
+\end{lstlisting}
+
 Duis sed augue et sem tempus tempor. Fusce ut bibendum diam. In orci tellus,
 porttitor ut euismod porttitor, lacinia in lacus. Aenean augue sem, porta
 eget ultricies id, ornare a purus. Nulla facilisi. Donec non dignissim
