Bug de pdfx contourné

--- a/these.tex
+++ b/these.tex
@@ -17,7 +17,7 @@
 %% Quelques définitions
 %% ------------------------
 
-%% Titre du document
+%% Titre du document. Ne pas l'écrire tout en majuscules!
 \newcommand{\UqacTheseTitre}{Applications du convecteur temporel:
   une étude empirique}
 
