Note mentionnant que le résumé est obligatoire

--- a/these.tex
+++ b/these.tex
@@ -125,7 +125,7 @@
 %% ------------------------
 \mainmatter
 \doublespacing
-\include{resume}
+\include{resume} % <-- Ne pas effacer! Cette section est *obligatoire* à l'UQAC!
 \include{introduction}
 \include{chapitre1}
 \include{chapitre2}
