--- a/these.tex
+++ b/these.tex
@@ -64,9 +64,8 @@
 \usepackage{listings}
 \lstset{
   language=Java,
-  basicstyle=\ttfamily\small,
-  columns=flexible,
-  frame=single
+  basicstyle=\ttfamily\small\linespread{0.8},
+  columns=flexible
 }
 \addto\captionsfrench{
   \renewcommand{\lstlistlistingname}{Liste des sources}
