Mise à jour des polices
Bera Mono pour le code source (au lieu de Computer Modern)
Package newtxtext pour le texte (au lieu de mathptmx qui est obsolète)
Meilleur espacement des lignes dans les listings

--- a/these.tex
+++ b/these.tex
@@ -64,7 +64,7 @@
 \usepackage{listings}
 \lstset{
   language=Java,
-  basicstyle=\ttfamily\small\linespread{0.8},
+  basicstyle=\linespread{1.1}\ttfamily\small,
   columns=flexible
 }
 \addto\captionsfrench{
